# aidevs3

./: .env.example  .gitignore  LICENSE  pyproject.toml
aidevs3/: captcha.py  data_repair.py  poligon.py  robot_verification.py
aidevs3/files/: __init__.py
aidevs3/memory/: ai_service.py  assistant_service.py  knowledge.py  memory_service.py  structure.py  vectorstore.py
aidevs3/memory/prompts/: extractqueries.py  knowledge.py
aidevs3/qdrant/: system_prompt.py
aidevs3/services/: ai.py  ai_service.py  langfuse_service.py  vector_service.py
notebooks/: dall_e.ipynb  demo.ipynb  embedding.ipynb  maps.ipynb  neo.ipynb  s02e05.ipynb  s03e03v2.ipynb  s03e03v3.ipynb  s03e04.ipynb  s03e05.ipynb  s04e01.ipynb  s04e02.ipynb
scripts/: dash.py  external.py  files.py  fuse.py  local.py  memory.py  ocr.py  promptfooconfig.yaml  qdrant.py  s01e01.py  s01e02.py  s01e03.py  s01e04.py  s01e05.py  s02e01.py  s02e04.py  s02e04verify.py  s03e01b.ipynb  s03e02.ipynb  token_count.py
tests/: test_data_repair.py
